--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>site epta</title>
+	<title>BeMaster.io</title>
 </head>
 <body>
-	
+	Hello BeMaster. We are starting.
 </body>
-</html>
