--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 	<title>BeMaster.io</title>
 </head>
 <body>
-	Hello BeMaster. We are starting.
+	Just install material framework Materialize. Cool. It works.
+	<div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
 </body>
