--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 	<title>BeMaster.io</title>
 </head>
 <body>
-	Just install material framework Materialize. Cool. It works.
-	<div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
+
+<div class="row section">
+	<div class="offset-s3 col s6 offset-s3">
+		<div class="progress">
+			<div class="determinate" style="width: 100%"></div>
+		</div>
+	</div>
+</div>
+
 </body>
