--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 
 <div class="row section">
 	<div class="offset-s3 col s6 offset-s3">
-		<div class="progress">
-			<div class="determinate" style="width: 100%"></div>
-		</div>
+		<div class="master-progress cyan lighten-1" width="100"></div>
 	</div>
 </div>
 
