Started work on the timer, get this from the proexperience, code of the timer was written a year ago ;)

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 		<div class="master-progress cyan lighten-1" width="100"></div>
 	</div>
 </div>
+<div id="timer"></div>
+<button id="start_stop">Start timer</button>
+
+
 
 </body>
