Created basic view and fuctionality for timer button (start, pause), time preview after pasuse, just client

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
 
 	<div class="row section">
 		<div class="offset-s3 col s6 offset-s3">
-			<div class="center-align" id="timer-button-block">
-				
+			<div class="center-align" id="timer-block">
+				<!-- Timer -->
 			</div>
 		</div>
 	</div>
