Fixed centering of the timer button

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 <body>
 
 	<div class="row section">
-		<div class="offset-s3 col s6 offset-s3">
+		<div class="col s12">
 			<div class="center-align" id="timer-block">
 				<!-- Timer -->
 			</div>
