Added basic authorization/registration

--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,14 @@
 
 <body>
 
-	<div class="row section">
-		<div class="col s12">
-			<div class="center-align" id="timer-block">
-				<!-- Timer -->
+	<!-- <div id="main-layout">
+		<div class="row section">
+			<div class="col s12">
+				<div class="center-align" id="timer-block">
+					Timer
+				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 </body>
