Cool. Now node packages was installed, but they are not tracked because of .gitignore. This commit with node packages installed and with top margin for timer button

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 	<div id="main-layout">
 		<div class="row section">
 			<div class="col s12">
-				<div class="center-align" id="TimerButton">
+				<div class="center-align timer-block" id="TimerButton">
 					<!-- Timer -->
 				</div>
 			</div>
