Installed flow-router with react-mounter, defined routes for /dashboard, /home and 404 page, also added header

--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,5 @@
 </head>
 
 <body>
-
-	<div id="main-layout">
-		<div class="row section">
-			<div class="col s12">
-				<div class="center-align timer-block" id="TimerButton">
-					<!-- Timer -->
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<div id="app"></div>
 </body>
