Added real-time total-time synchronization. fixed minor bugs

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,11 @@
 	<div id="main-layout">
 		<div class="row section">
 			<div class="col s12">
+				<div class="center-align timer-block" id="TotalTimeChart">
+					<!-- Timer -->
+				</div>
+			</div>
+			<div class="col s12">
 				<div class="center-align timer-block" id="TimerButton">
 					<!-- Timer -->
 				</div>
