Set environment to data vizualization

--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,22 @@
 		<div class="row section">
 			<div class="col s12">
 				<div class="center-align timer-block" id="TotalTimeChart">
-					<!-- Timer -->
+					<!-- TotalTimeChart -->
 				</div>
 			</div>
 			<div class="col s12">
 				<div class="center-align timer-block" id="TimerButton">
 					<!-- Timer -->
+				</div>
+			</div>
+			<div class="col s12">
+				<div class="center-align timer-block" id="CurrentProgressChart">
+					<!-- CurrentProgressChart -->
+				</div>
+			</div>
+			<div class="col s12">
+				<div class="center-align timer-block" id="ActivitiesDivisionChart">
+					<!-- ActivitiesDivisionChart -->
 				</div>
 			</div>
 		</div>
